updated profile API and wallet details
